# papago-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  default.nix  dev_env.sh.asc  index.html  search-index.js
hyper/: struct.HeaderMap.html  struct.Method.html  struct.Uri.html
hyper/header/: struct.HeaderMap.html  struct.HeaderName.html  struct.HeaderValue.html  struct.OccupiedEntry.html
hyper/rt/: trait.Future.html  trait.Stream.html
papago/: PapagoReq.t.html  all.html  enum.Lang.html  index.html  sidebar-items.js  struct.PapagoReq.html
papago/api/: NMT_URL.v.html  SMT_URL.v.html  constant.NMT_URL.html  constant.SMT_URL.html  enum.Error.html  enum.Lang.html  fn.send_request.html  index.html  send_request.v.html  sidebar-items.js  struct.PapagoReq.html
papago/argparse/: CLIArgs.t.html  fn.get_args.html  index.html  sidebar-items.js  struct.CLIArgs.html
papago/config/: NaverAuth.t.html  NaverAuthError.t.html  enum.NaverAuthError.html  fn.get_auth_from_env.html  get_auth_from_env.v.html  index.html  sidebar-items.js  struct.NaverAuth.html
reqwest/: struct.Method.html
reqwest/header/: struct.HeaderMap.html  struct.HeaderName.html  struct.HeaderValue.html  struct.OccupiedEntry.html
src/: api.rs  argparse.rs  config.rs  lib.rs
src/api/: model.rs
src/hyper/: error.rs.html  headers.rs.html  lib.rs.html  rt.rs.html  upgrade.rs.html
src/hyper/body/: body.rs.html  (+3 more)
src/papago/: api.rs.html  argparse.rs.html  config.rs.html  lib.rs.html
tokio/io/: trait.AsyncRead.html  trait.AsyncWrite.html  trait.Write.html
tokio/net/: struct.TcpStream.html
(+74 files in other folders)
